<resources>
    <string name="app_name">RDV Aflokkat</string>
    <string name="conseiller">Conseiller</string>
    <string name="switchBtn">Déjà étudiant</string>
    <string name="RDV">Réserver votre rendez-vous</string>
    <string name="r_server">Réserver !</string>
    <string name="le">Le</string>
    <string name="ludovic">Ludovic</string>
    <string-array name="conseillers">
        <item>Ludovic</item>
        <item>Sylvain</item>
        <item>Jessica</item>
        <item>Laetitia</item>
        <item>Benjamin</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="date">__ / __ / __</string>
    <string name="cal">cal</string>
</resources>